--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
-    
+
     <body>
+        <div class="flex-container">
+            <h1>Rock Paper Scissors</h1>
+        </div>
 
     </body>
     <script src="main.js"></script>
